--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -61,38 +61,35 @@
 <li>
     <a href="#forms">Forms</a>
     <ul>
-        <li><a href="#forms-basic">Basic example</a></li>
-        <li><a href="#forms-inline">Inline form</a></li>
+        <li><a href="#forms-basic">Contoh Dasar</a></li>
+        <li><a href="#forms-inline">Inline Form</a></li>
         <li><a href="#forms-horizontal">Horizontal form</a></li>
-        <li><a href="#forms-controls">Supported controls</a></li>
-        <li><a href="#forms-controls-static">Static control</a></li>
-        <li><a href="#forms-control-focus">Focus state</a></li>
-        <li><a href="#forms-control-disabled">Disabled state</a></li>
-        <li><a href="#forms-control-readonly">Readonly state</a></li>
-        <li><a href="#forms-control-validation">Validation states</a></li>
-        <li><a href="#forms-control-sizes">Control sizing</a></li>
-        <li><a href="#forms-help-text">Help text</a></li>
+        <li><a href="#forms-controls">Jenis-jenis Input Dasar</a></li>
+        <li><a href="#forms-controls-static">Static Input</a></li>
+        <li><a href="#forms-control-state">Input State</a></li>
+        <li><a href="#forms-control-validation">Validasi & Feedback</a></li>
+        <li><a href="#forms-control-sizes">Variasi Ukuran</a></li>
+        <li><a href="#forms-help-text">Teks Keterangan</a></li>
     </ul>
 </li>
 <li>
-    <a href="#buttons">Buttons</a>
+    <a href="#buttons">Button / Tombol</a>
     <ul>
         <li><a href="#buttons-tags">Button tags</a></li>
-        <li><a href="#buttons-options">Options</a></li>
-        <li><a href="#buttons-sizes">Sizes</a></li>
-        <li><a href="#buttons-active">Active state</a></li>
-        <li><a href="#buttons-disabled">Disabled state</a></li>
+        <li><a href="#buttons-accent">Aksen</a></li>
+        <li><a href="#buttons-sizes">Variasi Ukuran</a></li>
+        <li><a href="#buttons-state">Button State</a></li>
     </ul>
 </li>
 <li>
-    <a href="#images">Images</a>
+    <a href="#images">Gambar</a>
     <ul>
-        <li><a href="#images-responsive">Responsive images</a></li>
-        <li><a href="#images-shapes">Image shapes</a></li>
+        <li><a href="#images-responsive">Gambar Responsif</a></li>
+        <li><a href="#images-shapes">Varian Bentuk</a></li>
     </ul>
 </li>
 <li>
-    <a href="#helper-classes">Helper classes</a>
+    <a href="#helper-classes">Helpers</a>
     <ul>
         <li><a href="#helper-classes-colors">Contextual colors</a></li>
         <li><a href="#helper-classes-backgrounds">Contextual backgrounds</a></li>
@@ -107,26 +104,11 @@
     </ul>
 </li>
 <li>
-    <a href="#responsive-utilities">Responsive utilities</a>
-    <ul>
-        <li><a href="#responsive-utilities-classes">Available classes</a></li>
-        <li><a href="#responsive-utilities-print">Print classes</a></li>
-        <li><a href="#responsive-utilities-tests">Test cases</a></li>
-    </ul>
-</li>
-<li>
-    <a href="#less">Using Less</a>
+    <a href="#less"><span class="icon icon-ios-bolt text-vibrant"></span> Hack It!</a>
     <ul>
         <li><a href="#less-bootstrap">Compiling Bootstrap</a></li>
         <li><a href="#less-variables">Variables</a></li>
         <li><a href="#less-mixins-vendor">Vendor mixins</a></li>
         <li><a href="#less-mixins-utility">Utility mixins</a></li>
-    </ul>
-</li>
-<li>
-    <a href="#sass">Using Sass</a>
-    <ul>
-        <li><a href="#sass-contents">What's included</a></li>
-        <li><a href="#sass-installation">Installation</a></li>
     </ul>
 </li>
