--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -21,7 +21,7 @@
             {% endif %}
         </div>
 
-        <div class="grid-fluid">
+        <div class="grid-fluid grid-parent">
             <!-- left sidebar navigation -->
             <div class="grid-25 docs-left-sidebar">
                 <ul>
