--- a/less/forms.less
+++ b/less/forms.less
@@ -292,13 +292,13 @@ input[type="checkbox"] {
 
 // Feedback / Validation states
 .validation-success {
-  .form-control-validation(@state-success-text; @state-success-text; @state-success-bg);
+  .form-control-validation(@state-success-text; @state-success-border; @state-success-bg);
 }
 .validation-warning {
-  .form-control-validation(@state-warning-text; @state-warning-text; @state-warning-bg);
+  .form-control-validation(@state-warning-text; @state-warning-border; @state-warning-bg);
 }
 .validation-error {
-  .form-control-validation(@state-error-text; @state-error-text; @state-error-bg);
+  .form-control-validation(@state-error-text; @state-error-border; @state-error-bg);
 }
 
 /**
