--- a/less/variables.less
+++ b/less/variables.less
@@ -264,21 +264,21 @@
 * ## for forms & alert
 */
 
-@state-success-text:             darken(@accent-success,50);
+@state-success-text:             darken(@accent-success,20);
 @state-success-bg:               lighten(@accent-success,50);
-@state-success-border:           darken(spin(@state-success-bg, -10), 5%);
+@state-success-border:           darken(spin(@state-success-bg, -10), 20%);
 
-@state-info-text:                darken(@accent-info,50);
+@state-info-text:                darken(@accent-info,20);
 @state-info-bg:                  lighten(@accent-info,30);
-@state-info-border:              darken(spin(@state-info-bg, -10), 7%);
+@state-info-border:              darken(spin(@state-info-bg, -10), 20%);
 
-@state-warning-text:             darken(@accent-warning,50);
+@state-warning-text:             darken(@accent-warning,20);
 @state-warning-bg:               lighten(@accent-warning,30);
-@state-warning-border:           darken(spin(@state-warning-bg, -10), 5%);
+@state-warning-border:           darken(spin(@state-warning-bg, -10), 20%);
 
-@state-error-text:              darken(@accent-error,50);
+@state-error-text:              darken(@accent-error,20);
 @state-error-bg:                lighten(@accent-error,30);
-@state-error-border:            darken(spin(@state-error-bg, -10), 5%);
+@state-error-border:            darken(spin(@state-error-bg, -10), 20%);
 
 /**
 * Thumbnails
@@ -324,6 +324,6 @@
 @max-width: 1200px;
 @min-width: 320px;
 
-@grid-gutter: 0;
+@grid-gutter: 10px;
 @grid-gutter-half: @grid-gutter/2;
 
