finish css docs

--- a/docs/_includes/nav/css.html
+++ b/docs/_includes/nav/css.html
@@ -23,7 +23,7 @@
     </ul>
 </li>
 <li>
-    <a href="#type">Typography</a>
+    <a href="#type">Tipografi / Tulisan</a>
     <ul>
         <li><a href="#type-headings">Headings</a></li>
         <li><a href="#type-paragraph">Paragraf</a></li>
@@ -89,18 +89,21 @@
     </ul>
 </li>
 <li>
-    <a href="#helper-classes">Helpers</a>
+    <a href="#ruler">Garis Pemisah</a>
     <ul>
-        <li><a href="#helper-classes-colors">Contextual colors</a></li>
-        <li><a href="#helper-classes-backgrounds">Contextual backgrounds</a></li>
-        <li><a href="#helper-classes-close">Close icon</a></li>
-        <li><a href="#helper-classes-carets">Carets</a></li>
-        <li><a href="#helper-classes-floats">Quick floats</a></li>
-        <li><a href="#helper-classes-center">Center content blocks</a></li>
-        <li><a href="#helper-classes-clearfix">Clearfix</a></li>
-        <li><a href="#helper-classes-show-hide">Showing and hiding content</a></li>
-        <li><a href="#helper-classes-screen-readers">Screen reader and keyboard navigation content</a></li>
-        <li><a href="#helper-classes-image-replacement">Image replacement</a></li>
+        <li><a href="#ruler-horizontal">Horizontal Ruler</a></li>
+        <li><a href="#ruler-vertical">Vertical Ruler</a></li>
+        <li><a href="#ruler-variant">Varian Aksen & Bentuk</a></li>
+    </ul>
+</li>
+<li>
+    <a href="#composite">Kelas Komposit</a>
+    <ul>
+        <li><a href="#composite-accent">Aksen</a></li>
+        <li><a href="#composite-shape">Bentuk</a></li>
+        <li><a href="#composite-icons">Icon</a></li>
+        <li><a href="#composite-padding-margin">Padding & Margin</a></li>
+        <li><a href="#composite-position">Posisi</a></li>
     </ul>
 </li>
 <li>
