--- a/less/main.less
+++ b/less/main.less
@@ -21,10 +21,10 @@
 @import "table.less";
 @import "buttons.less";
 @import "code.less";
-@import "ruller.less";
+@import "ruler.less";
 
 // Component
 @import "components.less";
 
 // Utility & Helper
-@import "utilities.less";
+@import "composite.less";
