--- a/less/mixins.less
+++ b/less/mixins.less
@@ -19,3 +19,5 @@
 @import 'mixins/label.less';
 @import 'mixins/components.less';
 @import 'mixins/image.less';
+@import 'mixins/ruler.less';
+@import 'mixins/composite.less';
