--- a/less/typography.less
+++ b/less/typography.less
@@ -189,6 +189,7 @@ mark,
 .text-neutral { color: @accent-neutral; }
 .text-dark { color: @accent-dark; }
 .text-light { color: @accent-light; }
+.text-soft { color: @accent-soft; }
 .text-vibrant { color: @accent-vibrant; }
 .text-clear { color: @accent-clear; }
 
