--- a/docs/_includes/getting-started/installation.html
+++ b/docs/_includes/getting-started/installation.html
@@ -71,7 +71,7 @@ npm install http://git.lussa.net/tarsius/tarsius-ui.git --save-dev
 
 {% highlight shell %}
 # installasi dengan menggunakan bower
-bower install http://git.lussa.net/tarsius/tarsius-ui. --save
+bower install http://git.lussa.net/tarsius/tarsius-ui.git --save
 {% endhighlight %}
 
 </div>
