--- a/docs/_includes/getting-started/introduction.html
+++ b/docs/_includes/getting-started/introduction.html
@@ -1,5 +1,5 @@
-<h1 class="docs-section-title" id="intro">intro....</h1>
-<p class="docs-section-desc">kalo kata orang, tak kenal maka ta'aruf</p>
+<h1 class="docs-section-title" id="intro">Intro....</h1>
+<p class="docs-section-desc">Kalo kata orang, tak kenal maka ta'aruf</p>
 
 <!-- about -->
 <h2 class="docs-subsection-title" id="intro-about">The Frameworks</h2>
@@ -11,12 +11,15 @@
     Kurang lebih begitu-lah, kedepannya framework ini akan dibuat se-fleksible dan se-versatile mungkin, apalagi dengan datangnya teknologi baru yang memecahkan banyak masalah-masalah klasik kayak clearfix, wrapping, vertical alignment dkk. yaitu ES6, web-component, angular 2.0, Flexbox dkk.
     </p>
 </div>
+<hr class="ruler-light" />
 <div class="grid-fluid" id="docs-home-artist">
     <div class="grid-40 text-right">
-        <h2>crafted by artist<br/>build for artist</h2>
+        <h2>crafted by <strong class="text-primary">artist</strong><br/>
+            build for <strong class="text-primary">artist</strong></h2>
         <h6>build from foundation and mindset of an artist</h6>
     </div>
     <div class="grid-60 text-center">
         <img src="assets/img/home-artist.png"  />
     </div>
 </div>
+<hr class="ruler-light" />
