--- a/docs/_includes/nav/getting-started.html
+++ b/docs/_includes/nav/getting-started.html
@@ -5,7 +5,7 @@
     </ul>
 </li>
 <li>
-    <a href="#install">Installation</a>
+    <a href="#install">Instalasi</a>
     <ul>
         <li><a href="#install-prerequisite">Prerequisite</a></li>
         <li><a href="#install-npm">Using NPM</a></li>
@@ -14,10 +14,10 @@
     </ul>
 </li>
 <li>
-    <a href="#docs">Documentation & Testing</a>
+    <a href="#docs">Dokumentasi dan Pengujian</a>
     <ul>
-        <li><a href="#docs-build">Build Documentation</a></li>
-        <li><a href="#docs-jekyll">Install Jekyll</a></li>
-        <li><a href="#docs-testing">Test & Integration</a></li>
+        <li><a href="#docs-requirement">Requirement</a></li>
+        <li><a href="#docs-build">Build Docs</a></li>
+        <li><a href="#docs-test">Pengujian</a></li>
     </ul>
 </li>
