--- a/less/grid.less
+++ b/less/grid.less
@@ -29,9 +29,11 @@ body {
 // -------------------
 
 
-.grid-container:before, .clearfix:before,
+.grid-container:before,
+.clearfix:before,
 .grid-container:after,
-.grid-fluid:before, .clearfix:before,
+.grid-fluid:before,
+.clearfix:before,
 .grid-fluid:after,
 .clearfix:after {
     content: ".";
