--- a/less/mixins/composite.less
+++ b/less/mixins/composite.less
@@ -280,3 +280,13 @@
         }
     }
 }
+
+// Positioning
+.make-position(@top:auto,@bottom:auto,@right:auto,@left:auto){
+    position:absolute;
+    z-index: 2;
+    top: @top;
+    bottom: @bottom;
+    left: @left;
+    right: @right;
+}
