--- a/docs/assets/css/docs.css
+++ b/docs/assets/css/docs.css
@@ -300,6 +300,13 @@ body a{
     width: 200px;
     height: 200px;
     border: 1px solid #000000;
-    background: #888888;
-    color: #FFFFFF;
+    background: #e9e9e9;
+    border-radius: 3px;
+}
+.docs-pull-example {
+    border: 1px solid #000000;
+    padding: 20px;
+    border-radius: 3px;
+    background: #e9e9e9;
+    max-width: 200px;
 }
